@@ -1,10 +1,11 @@
 2011-01-xx robux4/mosu
-New 1.1.1 version:
+New 1.2.0 version:
     - no need to put the internal code of EbmlCrc32 in the public header
     - more safety on the Binary buffer handling in case we run out of memory
     - fix CRC32 detection in master elements
     - fix compilation under gcc 4.5
     - Fixed handling of UTF-8 strings with characters encoded in more than three bytes.
+    - Increased library .so name to .3 due to binary incompatible changes.
 
 2010-07-xx robux4
 New 1.1.0 version:
